feat: Add Open Source Contributions section with GitHub PRs and organizations

--- a/index.html
+++ b/index.html
@@ -359,6 +359,76 @@
             </div>
         </section>
 
+        <section id="opensource" class="container">
+            <div class="section-title">
+                <h2>&lt;OPEN_SOURCE_CONTRIBS&gt;</h2>
+                <div class="glitch-line"></div>
+            </div>
+
+            <div class="contrib-grid">
+                <!-- Orgs -->
+                <div class="contrib-card orgs">
+                    <h3><span class="cmd">></span> Organizations</h3>
+                    <div class="org-list">
+                        <a href="https://github.com/iiab" target="_blank" class="org-badge">
+                            <span class="org-icon">📦</span>
+                            <span class="org-name">Internet-in-a-Box</span>
+                            <span class="org-desc">MIT/UNESCO · Raspberry Pi Libraries</span>
+                        </a>
+                        <a href="https://github.com/LenguajeJulia" target="_blank" class="org-badge">
+                            <span class="org-icon">💜</span>
+                            <span class="org-name">LenguajeJulia</span>
+                            <span class="org-desc">Julia en Español</span>
+                        </a>
+                        <a href="https://github.com/Julia-i18n" target="_blank" class="org-badge">
+                            <span class="org-icon">🌐</span>
+                            <span class="org-name">Julia-i18n</span>
+                            <span class="org-desc">Internacionalización</span>
+                        </a>
+                        <a href="https://github.com/HackCTF" target="_blank" class="org-badge">
+                            <span class="org-icon">🏴‍☠️</span>
+                            <span class="org-name">HackCTF</span>
+                            <span class="org-desc">CTF Platform</span>
+                        </a>
+                        <a href="https://github.com/synapse-lang" target="_blank" class="org-badge">
+                            <span class="org-icon">⚡</span>
+                            <span class="org-name">synapse-lang</span>
+                            <span class="org-desc">Programming Language</span>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- PRs -->
+                <div class="contrib-card prs">
+                    <h3><span class="cmd">></span> Merged Pull Requests</h3>
+                    <div class="pr-list">
+                        <a href="https://github.com/JuliaRegistries/General/pull/29508" target="_blank" class="pr-item">
+                            <span class="pr-repo">JuliaRegistries/General</span>
+                            <span class="pr-title">Merly 1.0.0 - Official Package Registry</span>
+                            <span class="pr-status merged">MERGED</span>
+                        </a>
+                        <a href="https://github.com/codewars/codewars-runner-cli/pull/214" target="_blank"
+                            class="pr-item">
+                            <span class="pr-repo">codewars/runner-cli</span>
+                            <span class="pr-title">Julia Language Support</span>
+                            <span class="pr-status merged">MERGED</span>
+                        </a>
+                        <a href="https://github.com/the-benchmarker/web-frameworks/pull/3934" target="_blank"
+                            class="pr-item">
+                            <span class="pr-repo">the-benchmarker</span>
+                            <span class="pr-title">Merly.jl Web Framework Benchmark</span>
+                            <span class="pr-status merged">MERGED</span>
+                        </a>
+                        <a href="https://github.com/iiab/iiab/pull/3579" target="_blank" class="pr-item">
+                            <span class="pr-repo">iiab/iiab</span>
+                            <span class="pr-title">GitHub Actions CI/CD for RaspiOS</span>
+                            <span class="pr-status merged">MERGED</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="education" class="container">
             <div class="section-title">
                 <h2>&lt;ACADEMIA_&_CERTS&gt;</h2>
