feat: Add Impact Metrics section (O-1 Visa Evidence) with stars and seniority

--- a/index.html
+++ b/index.html
@@ -429,6 +429,35 @@
             </div>
         </section>
 
+        <section id="impact" class="container">
+            <div class="section-title">
+                <h2>&lt;IMPACT_METRICS&gt;</h2>
+                <div class="glitch-line"></div>
+            </div>
+            <div class="metrics-grid">
+                <div class="metric-card">
+                    <div class="metric-icon">⭐</div>
+                    <div class="metric-number">318</div>
+                    <div class="metric-label">GitHub Stars</div>
+                </div>
+                <div class="metric-card">
+                    <div class="metric-icon">📦</div>
+                    <div class="metric-number">404</div>
+                    <div class="metric-label">Total Repositories</div>
+                </div>
+                <div class="metric-card">
+                    <div class="metric-icon">⏳</div>
+                    <div class="metric-number">11+</div>
+                    <div class="metric-label">Years Active</div>
+                </div>
+                <div class="metric-card">
+                    <div class="metric-icon">🌍</div>
+                    <div class="metric-number">5+</div>
+                    <div class="metric-label">Major Orgs</div>
+                </div>
+            </div>
+        </section>
+
         <section id="education" class="container">
             <div class="section-title">
                 <h2>&lt;ACADEMIA_&_CERTS&gt;</h2>
