feat: Optimize JSON-LD with verified academic background, metrics and credentials for Knowledge Graph

--- a/index.html
+++ b/index.html
@@ -38,11 +38,61 @@
       "url": "https://josueacevedo.com",
       "image": "https://josueacevedo.com/avatar.jpg",
       "jobTitle": "System Architect & Kernel Hacker",
+      "description": "Kernel Hacker, System Architect y Full-Stack Developer con 15+ años creando sistemas operativos, hypervisores y modernizando legado. Autor de 'Ensamblador X86'.",
       "worksFor": [
-        { "@type": "Organization", "name": "HackCTF" },
-        { "@type": "Organization", "name": "Acevedo Industries" }
+        { "@type": "Organization", "name": "HackCTF", "roleName": "Lead Architect" },
+        { "@type": "Organization", "name": "Acevedo Industries", "roleName": "Founder" }
       ],
-      "knowsAbout": ["Kernel Development", "Rust", "COBOL", "Mainframes", "Cybersecurity", "Hypervisors", "Artificial Intelligence", "Julia", "eBPF", "x86 Assembly"],
+      "alumniOf": [
+        {
+          "@type": "CollegeOrUniversity",
+          "name": "Instituto Tecnológico de Oaxaca (TecNM)",
+          "sameAs": "https://www.oaxaca.tecnm.mx/"
+        }
+      ],
+      "memberOf": [
+        { 
+            "@type": "Organization", 
+            "name": "Julia Language Community",
+            "sameAs": "https://julialang.org/"
+        },
+        { 
+            "@type": "Organization", 
+            "name": "Internet-in-a-Box Project", 
+            "sameAs": "https://internet-in-a-box.org/" 
+        }
+      ],
+      "hasCredential": [
+        { "@type": "EducationalOccupationalCredential", "name": "Linux Kernel Development", "recognizedBy": "The Linux Foundation" },
+        { "@type": "EducationalOccupationalCredential", "name": "Deep Learning Institute", "recognizedBy": "NVIDIA" },
+        { "@type": "EducationalOccupationalCredential", "name": "Network Security Expert", "recognizedBy": "Fortinet" }
+      ],
+      "interactionStatistic": [
+        {
+          "@type": "InteractionCounter",
+          "interactionType": { "@type": "LikeAction" },
+          "userInteractionCount": 318,
+          "description": "GitHub Stars"
+        },
+        {
+          "@type": "InteractionCounter",
+          "interactionType": { "@type": "CreateAction" },
+          "userInteractionCount": 404,
+          "description": "Public Repositories"
+        }
+      ],
+      "knowsAbout": [
+        "Kernel Development", 
+        "Rust Programming", 
+        "COBOL Mainframe Modernization", 
+        "Hypervisor Development", 
+        "Quantum Computing Fundamentals", 
+        "Hardware Prototyping (ASIC/FPGA)",
+        "Julia Language", 
+        "eBPF", 
+        "x86 Assembly",
+        "Cybersecurity & Forensic Analysis"
+      ],
       "sameAs": [
         "https://linkedin.com/in/josue-acevedo", 
         "https://github.com/neomatrixcode",
