feat: Add YouTube metrics (6.2K subs) to Impact section and JSON-LD

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
           "interactionType": { "@type": "CreateAction" },
           "userInteractionCount": 404,
           "description": "Public Repositories"
+        },
+        {
+          "@type": "InteractionCounter",
+          "interactionType": { "@type": "SubscribeAction" },
+          "userInteractionCount": 6227,
+          "description": "YouTube Subscribers"
         }
       ],
       "knowsAbout": [
@@ -504,6 +510,11 @@
                     <div class="metric-icon">🌍</div>
                     <div class="metric-number">5+</div>
                     <div class="metric-label">Major Orgs</div>
+                </div>
+                <div class="metric-card">
+                    <div class="metric-icon">▶️</div>
+                    <div class="metric-number">6.2K</div>
+                    <div class="metric-label">YouTube Subs</div>
                 </div>
             </div>
         </section>
