Configuración final para despliegue: josueacevedo.dev (Canonical + Vercel Headers)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords"
         content="Josue Acevedo Maldonado, Neomatrix, Kernel Hacker, System Architect, HackOS, Rust Hypervisor, COBOL, Mainframe, Julia Language, HackCTF">
     <meta name="author" content="Josue Acevedo Maldonado">
-    <link rel="canonical" href="https://josueacevedo.com">
+    <link rel="canonical" href="https://josueacevedo.dev">
 
     <!-- Open Graph / Meta Tags -->
     <meta property="og:type" content="profile">
@@ -35,7 +35,7 @@
       "@type": "Person",
       "name": "Josue Acevedo Maldonado",
       "alternateName": "Neomatrix",
-      "url": "https://josueacevedo.com",
+      "url": "https://josueacevedo.dev",
       "image": "https://josueacevedo.com/avatar.jpg",
       "jobTitle": "System Architect & Kernel Hacker",
       "description": "Kernel Hacker, System Architect y Full-Stack Developer con 15+ años creando sistemas operativos, hypervisores y modernizando legado. Autor de 'Ensamblador X86'.",
