Fix: Add Twitter Card meta tags for social previews

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <meta property="og:type" content="profile">
     <meta property="og:title" content="Josue Acevedo (Neomatrix) - Elite System Programmer">
     <meta property="og:description" content="Diseñando lo invisible. HackOS, Hypervisores y Mainframes.">
-    <meta property="og:image" content="hero-bg.jpg">
+    <meta property="og:image" content="https://josueacevedo.dev/hero-bg.jpg">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Josue Acevedo (Neomatrix) - Elite System Programmer">
+    <meta name="twitter:description" content="Diseñando lo invisible. HackOS, Hypervisores y Mainframes.">
+    <meta name="twitter:image" content="https://josueacevedo.dev/hero-bg.jpg">
 
     <link rel="stylesheet" href="styles.css">
     <!-- Fira Code for that true dev aesthetic -->
