Fix: Add missing og:url and og:site_name for link previews

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <!-- Open Graph / Meta Tags -->
     <meta property="og:type" content="profile">
+    <meta property="og:url" content="https://josueacevedo.dev">
+    <meta property="og:site_name" content="Josue Acevedo | Kernel Hacker">
     <meta property="og:title" content="Josue Acevedo (Neomatrix) - Elite System Programmer">
     <meta property="og:description" content="Diseñando lo invisible. HackOS, Hypervisores y Mainframes.">
     <meta property="og:image" content="https://josueacevedo.dev/hero-bg.jpg">
