--- a/index.html
+++ b/index.html
@@ -646,6 +646,65 @@
             </div>
         </section>
 
+        <section id="research" class="container">
+            <div class="section-title">
+                <h2>&lt;RESEARCH_&_PUBLICATIONS&gt;</h2>
+                <div class="glitch-line"></div>
+            </div>
+            <div class="research-grid">
+                <!-- arXiv Paper -->
+                <div class="research-card">
+                    <div class="research-icon">📄</div>
+                    <div class="research-content">
+                        <div class="research-type">ACADEMIC PAPER</div>
+                        <h3>Merly.jl: Web Framework in Julia</h3>
+                        <p class="research-meta">Published on arXiv (Cornell University) · 2021</p>
+                        <p class="research-desc">
+                            A micro web framework written in Julia to create web applications and microservices.
+                            Focuses on high performance and ease of use.
+                        </p>
+                        <a href="https://arxiv.org/abs/2102.05706" target="_blank" class="btn-research">
+                            READ PAPER <span class="arrow">→</span>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Book -->
+                <div class="research-card">
+                    <div class="research-icon">📘</div>
+                    <div class="research-content">
+                        <div class="research-type">BOOK</div>
+                        <h3>Ensamblador X86: Teoría y Práctica</h3>
+                        <p class="research-meta">Technical Reference · Neomatrix</p>
+                        <p class="research-desc">
+                            Comprehensive guide to low-level optimization and system architecture using X86 Assembly.
+                        </p>
+                        <!-- Archive Link or Amazon link if available, keeping disabled for now or pointing to search -->
+                        <a href="https://www.google.com/search?q=Ensamblador+X86+Teoria+y+Practica+Josue+Acevedo"
+                            target="_blank" class="btn-research">
+                            FIND ONLINE <span class="arrow">→</span>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Medium Article -->
+                <div class="research-card">
+                    <div class="research-icon">✍️</div>
+                    <div class="research-content">
+                        <div class="research-type">ARTICLE</div>
+                        <h3>Julia, una introducción rápida</h3>
+                        <p class="research-meta">Medium · Technical Dissemination</p>
+                        <p class="research-desc">
+                            Deep dive into Julia's type system and performance characteristics compared to C/Fortran.
+                        </p>
+                        <a href="https://medium.com/@neomatrixcode" target="_blank" class="btn-research">
+                            READ ARTICLE <span class="arrow">→</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="transmissions" class="container">
             <div class="section-title">
                 <h2 data-i18n="transmissions_title">&lt;TRANSMISSIONS&gt;</h2>
