Feat: Add CENEVAL citation badge - national examination reference credential

--- a/index.html
+++ b/index.html
@@ -670,19 +670,22 @@
                 </div>
 
                 <!-- Book -->
-                <div class="research-card">
+                <div class="research-card featured">
                     <div class="research-icon">📘</div>
                     <div class="research-content">
                         <div class="research-type" data-i18n="research_book_type">BOOK</div>
                         <h3>Ensamblador X86: Teoría y Práctica</h3>
-                        <p class="research-meta">Technical Reference · Neomatrix</p>
+                        <p class="research-meta">Technical Reference · 2019</p>
+                        <div class="ceneval-badge">
+                            <span class="badge-icon">🏛️</span>
+                            <span class="badge-text" data-i18n="ceneval_badge">CENEVAL Reference — Cited in Mexico's
+                                national EGEL Plus ICOMPU examination guide</span>
+                        </div>
                         <p class="research-desc" data-i18n="research_book_desc">
                             Comprehensive guide to low-level optimization and system architecture using X86 Assembly.
                         </p>
-                        <!-- Archive Link or Amazon link if available, keeping disabled for now or pointing to search -->
-                        <a href="https://www.google.com/search?q=Ensamblador+X86+Teoria+y+Practica+Josue+Acevedo"
-                            target="_blank" class="btn-research">
-                            <span data-i18n="research_btn_book">FIND ONLINE</span> <span class="arrow">→</span>
+                        <a href="https://nabucodonosor.app/book/ENSAMBLADOR_X86" target="_blank" class="btn-research">
+                            <span data-i18n="research_btn_book">GET BOOK</span> <span class="arrow">→</span>
                         </a>
                     </div>
                 </div>
