--- a/index.html
+++ b/index.html
@@ -673,19 +673,21 @@
                 <div class="research-card featured">
                     <div class="research-icon">📘</div>
                     <div class="research-content">
-                        <div class="research-type" data-i18n="research_book_type">BOOK</div>
+                        <div class="research-type" data-i18n="research_book_type">LIBRO</div>
                         <h3>Ensamblador X86: Teoría y Práctica</h3>
-                        <p class="research-meta">Technical Reference · 2019</p>
-                        <div class="ceneval-badge">
+                        <p class="research-meta">Referencia Técnica · 2019</p>
+                        <a href="https://egeluv.dgaeuv.com/2025/1/GUIAS-EXAMEN/Tecnica/GUIA-EGEL-ICOMPU.pdf"
+                            target="_blank" class="ceneval-badge">
                             <span class="badge-icon">🏛️</span>
-                            <span class="badge-text" data-i18n="ceneval_badge">CENEVAL Reference — Cited in Mexico's
-                                national EGEL Plus ICOMPU examination guide</span>
-                        </div>
+                            <span class="badge-text" data-i18n="ceneval_badge">Referencia CENEVAL — Citado en la guía
+                                del examen nacional EGEL Plus ICOMPU de México</span>
+                        </a>
                         <p class="research-desc" data-i18n="research_book_desc">
-                            Comprehensive guide to low-level optimization and system architecture using X86 Assembly.
+                            Guía integral de optimización de bajo nivel y arquitectura de sistemas usando Ensamblador
+                            X86.
                         </p>
                         <a href="https://nabucodonosor.app/book/ENSAMBLADOR_X86" target="_blank" class="btn-research">
-                            <span data-i18n="research_btn_book">GET BOOK</span> <span class="arrow">→</span>
+                            <span data-i18n="research_btn_book">OBTENER LIBRO</span> <span class="arrow">→</span>
                         </a>
                     </div>
                 </div>
