SEO: Add Book schema with CENEVAL citation for Knowledge Graph

--- a/index.html
+++ b/index.html
@@ -121,6 +121,48 @@
       ]
     }
     </script>
+
+    <!-- Book Schema for Knowledge Graph -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Book",
+      "name": "Ensamblador X86: Teoría y Práctica",
+      "alternateName": "ENSAMBLADOR x86: TEORIA Y PRACTICA",
+      "author": {
+        "@type": "Person",
+        "name": "Josue Acevedo Maldonado",
+        "alternateName": "Neomatrix",
+        "url": "https://josueacevedo.dev",
+        "sameAs": [
+          "https://github.com/neomatrixcode",
+          "https://linkedin.com/in/josue-acevedo",
+          "https://www.youtube.com/@NEOMATRIXcode"
+        ]
+      },
+      "datePublished": "2019",
+      "inLanguage": "es",
+      "genre": "Computer Science",
+      "about": ["x86 Assembly", "Low-level programming", "Computer Architecture", "Systems Programming"],
+      "description": "Guía integral de optimización de bajo nivel y arquitectura de sistemas usando Ensamblador X86. Referencia técnica para estudiantes de ingeniería en computación.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Nabucodonosor Editorial"
+      },
+      "url": "https://nabucodonosor.app/book/ENSAMBLADOR_X86",
+      "citation": {
+        "@type": "CreativeWork",
+        "name": "Guía EGEL Plus ICOMPU - CENEVAL",
+        "description": "Citado como referencia bibliográfica oficial en el examen nacional de egreso de Ingeniería Computacional de México",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Centro Nacional de Evaluación para la Educación Superior (CENEVAL)",
+          "sameAs": "https://www.ceneval.edu.mx/"
+        },
+        "url": "https://egeluv.dgaeuv.com/2025/1/GUIAS-EXAMEN/Tecnica/GUIA-EGEL-ICOMPU.pdf"
+      }
+    }
+    </script>
 </head>
 
 <body>
