SEO: Add author alternate names for CENEVAL citation format

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       "author": {
         "@type": "Person",
         "name": "Josue Acevedo Maldonado",
-        "alternateName": "Neomatrix",
+        "alternateName": ["Neomatrix", "Acevedo, M.", "Acevedo Maldonado, J.", "M. Acevedo"],
         "url": "https://josueacevedo.dev",
         "sameAs": [
           "https://github.com/neomatrixcode",
