Feat: Add full academic validation stack (CENEVAL, UABC, TecNM) to Research section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
         "name": "Nabucodonosor Editorial"
       },
       "url": "https://nabucodonosor.app/book/ENSAMBLADOR_X86",
-      "citation": {
+      "citation": [
+        {
         "@type": "CreativeWork",
         "name": "Guía EGEL Plus ICOMPU - CENEVAL",
         "description": "Citado como referencia bibliográfica oficial en el examen nacional de egreso de Ingeniería Computacional de México",
@@ -160,7 +161,28 @@
           "sameAs": "https://www.ceneval.edu.mx/"
         },
         "url": "https://egeluv.dgaeuv.com/2025/1/GUIAS-EXAMEN/Tecnica/GUIA-EGEL-ICOMPU.pdf"
-      }
+        },
+        {
+          "@type": "CreativeWork",
+          "name": "Catálogo Cimarrón - UABC",
+          "description": "Disponible en el acervo bibliográfico de la Universidad Autónoma de Baja California",
+          "publisher": {
+            "@type": "Organization",
+            "name": "Universidad Autónoma de Baja California (UABC)",
+            "sameAs": "https://www.uabc.mx/"
+          },
+          "url": "https://catalogocimarron.uabc.mx/cgi-bin/koha/opac-detail.pl?biblionumber=254060"
+        },
+        {
+          "@type": "CreativeWork",
+          "name": "Material Didáctico - TecNM Querétaro",
+          "description": "Bibliografía oficial de la asignatura: Lenguajes de Interfaz (Clave SCC-1014) - Ingeniería en Sistemas Computacionales",
+          "publisher": {
+            "@type": "EducationalOrganization",
+            "name": "Tecnológico Nacional de México (TecNM) - IT Querétaro"
+          }
+        }
+      ]
     }
     </script>
 </head>
