--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Josue Acevedo Maldonado",
-      "alternateName": "Neomatrix",
+      "alternateName": ["Neomatrix", "Acevedo, M.", "Acevedo Maldonado, J.", "M. Acevedo"],
       "url": "https://josueacevedo.dev",
       "image": "https://josueacevedo.com/avatar.jpg",
       "jobTitle": "System Architect & Kernel Hacker",
