SEO: Update Conference details with National AI Center context

--- a/debug_site.html
+++ b/debug_site.html
@@ -42,7 +42,7 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Josue Acevedo Maldonado",
-      "alternateName": ["Neomatrix", "Acevedo, M.", "Acevedo Maldonado, J.", "M. Acevedo"],
+      "alternateName": "Neomatrix",
       "url": "https://josueacevedo.dev",
       "image": "https://josueacevedo.com/avatar.jpg",
       "jobTitle": "System Architect & Kernel Hacker",
@@ -183,35 +183,6 @@
           }
         }
       ]
-    }
-    </script>
-    <!-- Conference Event Schema -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "EducationEvent",
-      "name": "Inteligencia artificial en el reconocimiento de objetos, introducción",
-      "startDate": "2020-10-15",
-      "performer": {
-        "@type": "Person",
-        "name": "Josue Acevedo Maldonado",
-        "alternateName": "Neomatrix"
-      },
-      "location": {
-        "@type": "Place",
-        "name": "TecNM Campus Tláhuac II",
-        "address": {
-          "@type": "PostalAddress",
-          "addressLocality": "Mexico City",
-          "addressCountry": "MX"
-        }
-      },
-      "description": "Ponencia magistral impartida por el Ing. Josué Acevedo Maldonado en el 9º Simposio de Ingenierías, sede del actual Centro Nacional de Formación en Inteligencia Artificial.",
-      "image": "https://josueacevedo.dev/hero-bg.jpg",
-      "organizer": {
-        "@type": "Organization",
-        "name": "Tecnológico Nacional de México"
-      }
     }
     </script>
 </head>
@@ -781,24 +752,6 @@
                         </p>
                         <a href="https://nabucodonosor.app/book/ENSAMBLADOR_X86" target="_blank" class="btn-research">
                             <span data-i18n="research_btn_book">OBTENER LIBRO</span> <span class="arrow">→</span>
-                        </a>
-                    </div>
-                </div>
-
-                <!-- Conference -->
-                <div class="research-card">
-                    <div class="research-icon">🎤</div>
-                    <div class="research-content">
-                        <div class="research-type" data-i18n="research_conf_type">CONFERENCE KEYNOTE</div>
-                        <h3>AI in Object Recognition</h3>
-                        <p class="research-meta">9º Simposio de Ingenierías (TecNM) · 2020</p>
-                        <p class="research-desc" data-i18n="research_conf_desc">
-                            Keynote speech on Artificial Intelligence applied to computer vision and object recognition
-                            systems.
-                        </p>
-                        <a href="https://www.facebook.com/TECNMCampusTlahuacII/posts/pfbid0251ry3F2V7k9M8f5D9f4Z8J6n4X9g5c2V5b5v5n3X9g5c2V5b5v5n3"
-                            target="_blank" class="btn-research">
-                            <span data-i18n="research_btn_conf">VIEW EVENT</span> <span class="arrow">→</span>
                         </a>
                     </div>
                 </div>
