--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                             Keynote speech on Artificial Intelligence applied to computer vision and object recognition
                             systems.
                         </p>
-                        <a href="https://www.facebook.com/TECNMCampusTlahuacII/posts/pfbid0251ry3F2V7k9M8f5D9f4Z8J6n4X9g5c2V5b5v5n3X9g5c2V5b5v5n3"
+                        <a href="https://www.facebook.com/TECNMCampusTlahuacII/posts/%F0%9D%90%82%F0%9D%90%8E%F0%9D%90%8D%F0%9D%90%82%F0%9D%90%8B%F0%9D%90%94%F0%9D%90%98%F0%9D%90%84-%F0%9D%90%84%F0%9D%90%97%F0%9D%90%88%F0%9D%90%93%F0%9D%90%8E%F0%9D%90%92%F0%9D%90%80%F0%9D%90%8C%F0%9D%90%84%F0%9D%90%8D%F0%9D%90%93%F0%9D%90%84-%F0%9D%90%84%F0%9D%90%8B-%F0%9D%9F%97%C2%BA-%F0%9D%90%92%F0%9D%90%88%F0%9D%90%8C%F0%9D%90%8F%F0%9D%90%8E%F0%9D%90%92%F0%9D%90%88%F0%9D%90%8E-%F0%9D%90%83%F0%9D%90%84-%F0%9D%90%88%F0%9D%90%8D%F0%9D%90%86%F0%9D%90%84%F0%9D%90%8D%F0%9D%90%88%F0%9D%90%84%F0%9D%90%91%C3%AD%F0%9D%90%80%F0%9D%90%92-%F0%9D%90%83%F0%9D%90%84%F0%9D%90%8B-%F0%9D%90%93%F0%9D%90%84%F0%9D%90%82%F0%9D%90%8D%F0%9D%90%8C-%F0%9D%90%82%F0%9D%90%80%F0%9D%90%8C%F0%9D%90%8F%F0%9D%90%94%F0%9D%90%92-%F0%9D%90%93%F0%9D%90%8B%C3%A1%F0%9D%90%87%F0%9D%90%94%F0%9D%90%80%F0%9D%90%82-%F0%9D%90%88%F0%9D%90%88-/3828570607203993/"
                             target="_blank" class="btn-research">
                             <span data-i18n="research_btn_conf">VIEW EVENT</span> <span class="arrow">→</span>
                         </a>
