Feat: Add 2017 & 2020 Research Papers with Schema

--- a/index.html
+++ b/index.html
@@ -214,6 +214,49 @@
       }
     }
     </script>
+    <!-- Research Papers Schema -->
+    <script type="application/ld+json">
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "ScholarlyArticle",
+        "name": "Análisis de algoritmos que permitan implementar patrones para el reconocimiento de imágenes predefinidas, en lenguajes de alto nivel",
+        "headline": "Algorithm Analysis for Pattern Recognition in High-Level Languages",
+        "author": {
+          "@type": "Person",
+          "name": "Josue Acevedo Maldonado"
+        },
+        "datePublished": "2020-10-14",
+        "publication": {
+          "@type": "PublicationEvent",
+          "name": "Academia Journals Hidalgo 2020"
+        },
+        "inLanguage": "es"
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "ScholarlyArticle",
+        "name": "Evaluación de algoritmos bajo métricas definidas, para la identificación de la figura humana",
+        "headline": "Evaluación de algoritmos para identificación de figura humana (Python & C)",
+        "author": {
+          "@type": "Person",
+          "name": "Josue Acevedo Maldonado"
+        },
+        "datePublished": "2017-06-30",
+        "publisher": {
+          "@type": "Organization",
+          "name": "ECORFAN-México, S.C."
+        },
+        "publication": {
+            "@type": "Periodical",
+            "name": "Revista de Cómputo Aplicado",
+            "volumeNumber": "1",
+            "issueNumber": "2"
+        },
+        "inLanguage": "es"
+      }
+    ]
+    </script>
 </head>
 
 <body>
@@ -802,6 +845,33 @@
                         </a>
                     </div>
                 </div>
+
+                <!-- 2020 Academia Journals Paper -->
+                <div class="research-card">
+                    <div class="research-icon">📑</div>
+                    <div class="research-content">
+                        <div class="research-type" data-i18n="research_paper_type">ACADEMIC PAPER</div>
+                        <h3 data-i18n="research_paper2020_title">Algorithm Analysis for Pattern Recognition</h3>
+                        <p class="research-meta">Academia Journals (Hidalgo) · 2020</p>
+                        <p class="research-desc" data-i18n="research_paper2020_desc">
+                            Comparative analysis of computer vision algorithms.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- 2017 Journal & Conference -->
+                <div class="research-card">
+                    <div class="research-icon">🔬</div>
+                    <div class="research-content">
+                        <div class="research-type" data-i18n="research_article_type">JOURNAL & CONFERENCE</div>
+                        <h3 data-i18n="research_paper2017_title">Human Detection Algorithms</h3>
+                        <p class="research-meta">ECORFAN Journal & CIER Conference · 2017</p>
+                        <p class="research-desc" data-i18n="research_paper2017_desc">
+                            Performance evaluation of human detection patterns.
+                        </p>
+                    </div>
+                </div>
+
 
                 <!-- Medium Article -->
                 <div class="research-card">
