SEO: Link Knowledge Graph entities to newly created Wikidata entries

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         "Cybersecurity & Forensic Analysis"
       ],
       "sameAs": [
+        "https://www.wikidata.org/wiki/Q137605540",
         "https://linkedin.com/in/josue-acevedo", 
         "https://github.com/neomatrixcode",
         "https://www.youtube.com/@NEOMATRIXcode",
@@ -129,6 +130,7 @@
       "@type": "Book",
       "name": "Ensamblador X86: Teoría y Práctica",
       "alternateName": "ENSAMBLADOR x86: TEORIA Y PRACTICA",
+      "sameAs": "https://www.wikidata.org/wiki/Q137605736",
       "author": {
         "@type": "Person",
         "name": "Josue Acevedo Maldonado",
