Feat: Add RENIECYT Research Registry (ID: 1900915) to Bio and Schema

--- a/index.html
+++ b/index.html
@@ -119,7 +119,13 @@
         "https://openprofile.dev/profile/acevedo",
         "https://orcid.org/0000-0002-4056-1895",
         "https://www.researchgate.net/profile/Josue_Acevedo_Maldonado"
-      ]
+      ],
+      "memberOf": {
+        "@type": "Organization",
+        "name": "RENIECYT - CONACYT",
+        "identifier": "1900915",
+        "description": "Registro Nacional de Instituciones y Empresas Científicas y Tecnológicas"
+      }
     }
     </script>
 
@@ -707,6 +713,14 @@
                     <div class="edu-icon">📜</div>
                     <h3>Professional Certs</h3>
                     <ul class="edu-list">
+                        <li>
+                            <strong data-i18n="edu_reniecyt_badge">CONACYT Research Registry</strong>
+                            <span class="verified-icon">✅</span>
+                            <br>
+                            <span class="edu-org" data-i18n="edu_reniecyt_desc">Officially registered in Mexico's
+                                National Registry of Scientific and Technological Institutions (RENIECYT) since
+                                2019.</span>
+                        </li>
                         <li><strong>Linux Kernel Development</strong> <br> <span class="edu-org">Linux Foundation</span>
                         </li>
                         <li><strong>Deep Learning Certificate</strong> <br> <span class="edu-org">NVIDIA
