New Article Schema

--- a/index.html
+++ b/index.html
@@ -266,6 +266,32 @@
     ]
     </script>
 </head>
+<!-- New Article Schema: Link Medium Post to Identity -->
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "TechArticle",
+      "headline": "Building the 'God-Tier' Windows Workstation: AI & Gaming Hybrid",
+      "alternativeHeadline": "How I forced my RTX 4060 to stop lagging in games without breaking my TensorFlow environment",
+      "image": "https://josueacevedo.dev/hero-bg.jpg",
+      "author": {
+        "@type": "Person",
+        "name": "Josue Acevedo Maldonado",
+        "url": "https://josueacevedo.dev"
+      },
+      "keywords": "Windows Optimization, Data Science, RTX 4060, Kernel Tuning, PowerShell",
+      "wordCount": "1250",
+      "url": "https://josueacevedo.medium.com/building-the-god-tier-windows-workstation-ai-gaming-hybrid-208de046544f",
+      "datePublished": "2026-01-01",
+      "description": "Technical guide on optimizing Windows 10/11 for simultaneous low-latency gaming and machine learning workloads using custom MSI interrupts and CPU scheduling.",
+      "about": [
+        { "@type": "Thing", "name": "Windows Kernel" },
+        { "@type": "Thing", "name": "NVIDIA GPU Architecture" },
+        { "@type": "SoftwareSourceCode", "name": "windows-gaming-ds-optimization", "url": "https://github.com/neomatrixcode/windows-gaming-ds-optimization" }
+      ]
+    }
+    </script>
+</head>
 
 <body>
     <div class="scanline"></div>
